src/test/deca/context/invalid/unknown_identifier.deca
// Description:
//    Programme utilisant un identificateur non définie.
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : There is no definition for this name : x
//
// Historique:
//    cree le 06/01/2025

{   
    x = 3;
}